# Materials-Simulato-R

./: .env.example  .gitignore  Cargo.toml  README.md  STEM_BIBLIOGRAPHY_APIS.md  TDD_Materials-Simulato-R.md  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: compute_benchmarks.rs
config/: development.yml
crates/api/: Cargo.toml
crates/api/src/: error.rs  handlers.rs  lib.rs  middleware.rs  rate_limiter.rs  rest.rs
crates/api/src/rest/: calculations.rs  materials.rs  users.rs
crates/auth/: Cargo.toml
crates/auth/src/: error.rs  jwt.rs  lib.rs  middleware.rs  multi_tenant.rs  rbac.rs
crates/chaos-compression/: Cargo.toml
crates/chaos-compression/benches/: compression_bench.rs
crates/chaos-compression/results/: results_all_similarities.json
crates/chaos-compression/tests/: compression_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  error.rs  lib.rs  output.rs
crates/cli/src/commands/: ingest.rs  query.rs  simulate.rs  version.rs
crates/compute/: Cargo.toml
crates/compute/src/: dft_bridge.rs  error.rs  lib.rs  md_engine.rs  ml_engine.rs  properties.rs
crates/core/: Cargo.toml
crates/core/src/: auto_optimizer.rs  config.rs  crystallography.rs  discovery.rs  embeddings.rs  error.rs  feature_flags.rs  gnn.rs  hts.rs  knowledge_graph.rs  lib.rs  lirs.rs  lirs_examples.md  material.rs  ml_predictor.rs  nli.rs  property.rs  quantum.rs  quantum_lirs.rs  recommendations.rs  repl.rs  viz3d.rs
crates/database/: Cargo.toml
crates/database/src/: error.rs  etl_pipeline.rs  lib.rs  mongo.rs  neo4j_db.rs  postgres.rs  redis_cache.rs  smart_cache.rs  stem_bibliography_apis.rs
crates/drugs-core/: Cargo.toml
crates/drugs-core/src/: compound.rs  error.rs  lib.rs  molecule.rs  target.rs
crates/drugs-molecular/: Cargo.toml
crates/drugs-molecular/src/: descriptors.rs  fingerprints.rs  lib.rs  similarity.rs
crates/llm/: Cargo.toml
crates/llm/src/: circuit_breaker.rs  error.rs  fallback.rs  lib.rs  providers.rs  router.rs
crates/llm/src/providers/: local.rs  openai.rs
crates/monitoring/: Cargo.toml
crates/monitoring/src/: benchmarks.rs  error.rs  health.rs  lib.rs  metrics.rs  tracing_setup.rs
deployment/grafana/dashboards/: dashboard.yml
deployment/kubernetes/: namespace.yaml
deployment/prometheus/: prometheus.yml
scripts/: build.sh  dev-setup.sh  init-db.sql  test.sh
services/api-gateway/: Cargo.toml
services/api-gateway/src/: main.rs
services/compute-worker/: Cargo.toml
services/compute-worker/src/: main.rs
services/llm-orchestrator/: Cargo.toml
services/llm-orchestrator/src/: main.rs
