[workspace]
resolver = "2"

members = [
    "crates/core",
    "crates/database",
    "crates/compute",
    "crates/llm",
    "crates/auth",
    "crates/api",
    "crates/monitoring",
    "crates/cli",
    "crates/drugs-core",
    "crates/drugs-molecular",
    "services/api-gateway",
    "services/compute-worker",
    "services/llm-orchestrator",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.75.0"  # MSRV
authors = ["Yatrogenesis <info@yatrogenesis.com>"]
license = "MIT"
repository = "https://github.com/Yatrogenesis/Materials-Simulato-R"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
hyper = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "migrate"
] }
mongodb = "2.8"
neo4rs = "0.7"
redis = { version = "0.24", features = ["tokio-comp", "cluster"] }

# Scientific computing
ndarray = { version = "0.16", features = ["rayon", "serde"] }
nalgebra = "0.33"
rayon = "1.10"
polars = { version = "0.44", features = ["lazy", "dtype-full"], default-features = false }

# Machine learning
# candle-core = "0.7"  # TODO: Fix rand version conflicts
# candle-nn = "0.7"
# candle-transformers = "0.7"
# tch = "0.17"  # PyTorch bindings - requires libtorch
linfa = "0.7"  # Works fine for now

# LLM integration
async-openai = "0.18"
tokenizers = "0.15"

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Monitoring & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
opentelemetry = "0.21"

# Configuration
config = "0.14"
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time and dates
chrono = { version = "0.4", features = ["serde"] }

# Utilities
once_cell = "1.19"
lazy_static = "1.4"
parking_lot = "0.12"

# Connection pooling
deadpool-postgres = "0.12"
deadpool-redis = "0.14"

# Circuit breaker
failsafe = "1.3"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.bench]
inherits = "release"

[profile.test]
inherits = "dev"

# Performance optimization for dependencies
[profile.dev.package."*"]
opt-level = 2

[profile.release.package."*"]
opt-level = 3
