[package]
name = "materials-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core
materials-core = { path = "../core" }
materials-database = { path = "../database" }
materials-compute = { path = "../compute" }
materials-llm = { path = "../llm" }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# CLI
clap.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
