[package]
name = "materials-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# UUID
uuid.workspace = true

# Time
chrono.workspace = true

# Scientific computing
ndarray.workspace = true
nalgebra.workspace = true

# Utilities
once_cell.workspace = true

# Async (for auto-optimizer)
tokio.workspace = true

# Logging
tracing.workspace = true

# Random (for ML and discovery)
rand = "0.8"

# Drug Discovery Integration
drugs-core = { path = "../drugs-core" }
drugs-molecular = { path = "../drugs-molecular" }

# Chaotic Attractor Compression
materials-chaos-compression = { path = "../chaos-compression" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"
