[package]
name = "drugs-molecular"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
drugs-core = { path = "../drugs-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
ndarray.workspace = true
nalgebra.workspace = true
