[package]
name = "materials-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core
materials-core = { path = "../core" }

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# LLM integration
async-openai.workspace = true
tokenizers.workspace = true

# Circuit breaker
failsafe.workspace = true

# Utilities
once_cell.workspace = true
parking_lot.workspace = true

# Logging
tracing.workspace = true
metrics.workspace = true

# Time
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mockito = "1.2"
