[package]
name = "compute-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "compute-worker"
path = "src/main.rs"

[dependencies]
# Core crates
materials-core = { path = "../../crates/core" }
materials-database = { path = "../../crates/database" }
materials-compute = { path = "../../crates/compute" }
materials-monitoring = { path = "../../crates/monitoring" }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# UUID
uuid.workspace = true

# Error handling
anyhow.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Metrics
metrics.workspace = true

# Queue
redis.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
